[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/ui/FinalScoreUI.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/default.theme" type="Theme" id=2]
[ext_resource path="res://assets/audio/UI/snd_buttonPress.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/UI/snd_select.wav" type="AudioStream" id=4]

[node name="FinalScoreUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_neighbour_top = NodePath("CanvasLayer/ScoreBG/SelectUI/ReplayButton")
focus_neighbour_bottom = NodePath("CanvasLayer/ScoreBG/SelectUI/ReturnButton")
script = ExtResource( 1 )
sndSelect = ExtResource( 4 )
sndPress = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScoreBG" type="ColorRect" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -120.0
margin_right = 256.0
margin_bottom = 120.0
theme = ExtResource( 2 )
color = Color( 0, 0, 0, 0.588235 )

[node name="ScoreCalculation" type="Control" parent="CanvasLayer/ScoreBG"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -249.0
margin_top = -98.5
margin_right = -11.0
margin_bottom = 65.5

[node name="CalcText" type="Label" parent="CanvasLayer/ScoreBG/ScoreCalculation"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -42.0
text = "Base score num
x
Life bonus num
x
Multiplier bonus num"
align = 1
valign = 1

[node name="FinalScore" type="Control" parent="CanvasLayer/ScoreBG"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -57.5
margin_right = 120.0
margin_bottom = 57.5

[node name="FinalScore" type="Label" parent="CanvasLayer/ScoreBG/FinalScore"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -57.5
margin_right = 120.0
margin_bottom = 57.5
text = "Final Score"
align = 1
valign = 1

[node name="NewHighScore" type="Label" parent="CanvasLayer/ScoreBG/FinalScore"]
visible = false
margin_left = 80.0
margin_top = 25.5
margin_right = 152.0
margin_bottom = 39.5
text = "High score!"

[node name="SelectUI" type="Control" parent="CanvasLayer/ScoreBG"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -232.0
margin_top = -40.0
margin_right = 240.0
margin_bottom = -16.0

[node name="ReplayButton" type="Button" parent="CanvasLayer/ScoreBG/SelectUI"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -12.0
margin_right = 64.0
margin_bottom = 12.0
focus_neighbour_right = NodePath("../ReturnButton")
text = "Replay"

[node name="ReturnButton" type="Button" parent="CanvasLayer/ScoreBG/SelectUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -12.0
margin_right = 32.0
margin_bottom = 12.0
focus_neighbour_left = NodePath("../ReplayButton")
focus_neighbour_right = NodePath("../SendFeedbackButton")
text = "Return"

[node name="SendFeedbackButton" type="Button" parent="CanvasLayer/ScoreBG/SelectUI"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -148.0
margin_top = -12.0
margin_bottom = 12.0
focus_neighbour_left = NodePath("../ReturnButton")
text = "Send Feedback"

[node name="Label" type="Label" parent="CanvasLayer/ScoreBG"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -40.0
margin_top = 9.5
margin_right = 40.0
margin_bottom = 23.5
text = "GAME OVER!"
align = 1
valign = 1

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]

[connection signal="focus_entered" from="CanvasLayer/ScoreBG/SelectUI/ReplayButton" to="." method="button_focus_entered"]
[connection signal="pressed" from="CanvasLayer/ScoreBG/SelectUI/ReplayButton" to="." method="_on_ReplayButton_pressed"]
[connection signal="focus_entered" from="CanvasLayer/ScoreBG/SelectUI/ReturnButton" to="." method="button_focus_entered"]
[connection signal="pressed" from="CanvasLayer/ScoreBG/SelectUI/ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="focus_entered" from="CanvasLayer/ScoreBG/SelectUI/SendFeedbackButton" to="." method="button_focus_entered"]
[connection signal="pressed" from="CanvasLayer/ScoreBG/SelectUI/SendFeedbackButton" to="." method="_on_SendFeedbackButton_pressed"]
